--- a/style.css
+++ b/style.css
@@ -4,8 +4,13 @@
   box-sizing: border-box;
   font-family: "Figtree", serif;
 }
+html,
 body {
+  height: 100%;
   background-color: #f4d04e;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 #priview-card-container {
   width: 384px;
@@ -15,7 +20,6 @@ body {
   border: 1px solid black;
   box-shadow: 8px 8px 0px 0px #000;
   padding: 1.5rem;
-  margin: 3rem auto;
 }
 .preview-card-img {
   display: flex;
@@ -84,7 +88,7 @@ body {
 @media screen and (max-width: 500px) {
   #priview-card-container {
     width: 90%;
-    margin: 2rem auto;
+    margin: 0 auto;
   }
   .preview-card-img img {
     width: 100%;
